--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=ac78e7fa33bf138ead1b",
+    "/css/app.css": "/css/app.css?id=250d89a62301f57e4597"
 }
